NULL =

SUBDIRS = 		\
	$(NULL)

EXTRA_DIST =				\
	$(NULL)

TESTS_ENVIRONMENT = 						\
	export PATH=$(top_builddir)/utils/svlock-cli:$$PATH;	\
        $(NULL)
        
TESTS =		 			\
	svlock-cli.sh			\
	svlock-cli-multi-options.sh	\
	svlock-cli-fail.sh		\
	$(NULL)

CLEANFILES =		\
	actual/*.actual	\
	$(NULL)
